# Exercices-Cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
challenges/: alloca_aligned.hpp  block_allocator.hpp  force_move.hpp  iterator_traits.hpp  make_overload.hpp  nth_times.hpp  ring_buffer.hpp  tagged_ptr.hpp  thread_pool.hpp  to_string.hpp  unique_function.hpp
include/: dummy.hpp  slot_map.hpp  todo.hpp  tuples.hpp  unique_ptr.hpp
solutions/: slot_map.hpp  tuples.hpp  unique_ptr.hpp
src/: dummy.cpp
tests/: dummy.cpp  main.cpp  operations_tracker.hpp  slot_map.cpp  tuples.cpp  unique_ptr.cpp  utils.hpp
